- Icon window: fix display on one-character object names
- Fix memory leak when generating some sorts of matrices
- Add option of using Parzen kernel (the default is Bartlett)
  when computing HAC covariance matrix
- Add a toolbar to windows that display lists of files
- Various fixes for function package editor
- Fix for "omit" command in relation to arbond estimation
- Update the API documentation (still very much incomplete)
- Update gnuplot to version 4.2.0 in the Windows installer    

2/26/2007 version 1.6.1
- Revamp for internal "genr" mechanism plus some user-visible
  changes to genr
- Make the "delete" command do what the manual says
- Doing "Edit attributes" on a newly generated variable: you
  can edit the formula and hence change the content of the variable
- Displaying table of summary statistics for multiple variables:
  allow slightly longer variable names before falling back from
  combined tabular format to individual tables
- Sorting variables in main window: always revert to sort by ID
  number after making changes (e.g. loading a new dataset)
- Main-window variable listing: don't always jump to line 1 after
  making changes
- When you "Save as" in the Command log window, ensure that all the 
  regular script-editing signals are properly connected (e.g. the 
  state of the Save icon responds appropriately)
- "dummify" command: add options --drop-first and --drop-last; make
  --drop-first the default when the dummify() construct is used in 
  a regression list
- Add ordered probit analysis for the case where the dependent
  variable is discrete but not binary
- Add computation of generalized residuals in various estimators
- Revamp Tobit estimation: use BFGS instead of BHHH, allow --robust 
  option and add normality test
- Fix some bugs and inconsistencies in relation to the Ljung-Box
  statistic and ACFs
- Fix bug in the Baxter-King filter routine
- Add the CUSUMSQ test alongside CUSUM